changed title and some headers

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Rijksmuseum API Demo</title>
+        <title>Draw like Masters App - by elwebman.nl</title>
         <meta name="description" content="Rijksmuseum API">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <meta name="author" content="Alex Olivet">
@@ -15,7 +15,7 @@
     <body onload="init()">
         <div id="wrapper">
             <header>
-                <h1>Rijksmuseum API Demo</h1>
+                <h1>Draw like Masters App</h1>
             </header>
             
 
