changed meta tags

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Draw like Masters App - by elwebman.nl</title>
-        <meta name="description" content="Rijksmuseum API">
+        <meta name="description" content="Draw like Masters APP">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <meta name="author" content="Alex Olivet">
+        <meta name="author" content="Alex Olivet - elwebman.nl">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css?family=Oswald%7CCoiny%7CArimo" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     </head>
