--- a/index.html
+++ b/index.html
@@ -1,67 +1,68 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Draw like Masters App - by elwebman.nl</title>
-        <meta name="description" content="Draw like Masters APP">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-        <meta name="author" content="Alex Olivet - elwebman.nl">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-    </head>
-    
-    <body onload="init()">
+<head>
+    <meta charset="utf-8">
+    <title>Draw like Masters App - by elwebman.nl</title>
+    <meta name="description" content="Draw like Masters APP">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta name="author" content="Alex Olivet - elwebman.nl">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+</head>
+<body onload="init()">
+    <div id="maincontainer">
 
-
-
-
-<div id="maincontainer">
-
-<div id="topsection"><div class="innertube">
-    <header>
-                <h1>Draw like Masters App</h1>
-            </header></div></div>
-
-<div id="contentwrapper">
-<div id="contentcolumn">
-<div class="innertube">   <div class="outer-input-div">
-            <div class="inner-input-div">
-              <input id="query" type="search" placeholder="Artist, Painting, or anything!">
-              <input type="button" value="Search" id="search">
+        <div id="topsection">
+            <div class="innertube">
+                <header>
+                    <h1>Draw like Masters App</h1>
+                </header>
             </div>
-          </div>
-            
-        <div id="result"></div>
+        </div>
+        <div id="contentwrapper">
+            <div id="contentcolumn">
+                <div class="innertube">
+                    <div class="outer-input-div">
+                        <div class="inner-input-div">
+                            <input id="query" type="search" placeholder="Artist, Painting, or anything!">
+                            <input type="button" value="Search" id="search">
+                        </div>
+                    </div>
 
-       <p id="drawing1"></p>
- <canvas id="myCanvas" width="400" height="400" style="position:relative;top:10%;left:10%;border:2px solid;"></canvas></div>
-</div>
-</div>
+                    <div id="result"></div>
 
-<div id="leftcolumn">
-<div class="innertube"> <div style="position:relative;top:12%;left:43%;">Choose Color</div>
-        <div style="position:relative;top:15%;left:45%;width:10px;height:10px;background:green;" id="green" onclick="color(this)"></div>
-        <div style="position:relative;top:15%;left:46%;width:10px;height:10px;background:blue;" id="blue" onclick="color(this)"></div>
-        <div style="position:relative;top:15%;left:47%;width:10px;height:10px;background:red;" id="red" onclick="color(this)"></div>
-        <div style="position:relative;top:17%;left:45%;width:10px;height:10px;background:yellow;" id="yellow" onclick="color(this)"></div>
-        <div style="position:relative;top:17%;left:46%;width:10px;height:10px;background:orange;" id="orange" onclick="color(this)"></div>
-        <div style="position:relative;top:17%;left:47%;width:10px;height:10px;background:black;" id="black" onclick="color(this)"></div>
-        <div style="position:relative;top:20%;left:43%;">Eraser</div>
-        <div style="position:relative;top:22%;left:45%;width:15px;height:15px;background:white;border:2px solid;" id="white" onclick="color(this)"></div>
-        <img id="canvasimg" style="position:relative;top:10%;left:52%;" style="display:none;">
-        <input type="button" value="save" id="btn" size="30" onclick="save()" style="position:absolute;top:55%;left:10%;">
-        <input type="button" value="clear" id="clr" size="23" onclick="erase()" style="position:absolute;top:55%;left:15%;"></div>
-</div>
-
-<div id="rightcolumn">
-<div class="innertube"><b>Right Column: <em>200px</em></b> <script type="text/javascript">filltext(15)</script></div>
-</div>
-
-<div id="footer"><a href="http://www.elwebman.nl">Another App by elwebman.nl</a></div>
-
-</div>
-
-    <script type="text/javascript" src="js/script.js"></script>
-    </body>
+                    <p id="drawing1"></p>
+                    <canvas id="myCanvas" width="641" height="481" style="position:relative;top:10%;left:10%;border:2px solid;"></canvas>
+                </div>
+            </div>
+        </div>
+        <div id="leftcolumn">
+            <div class="innertube">
+                <div id="color_text">Choose Color</div>
+                <div id="green" onclick="color(this)"></div>
+                <div id="blue" onclick="color(this)"></div>
+                <div id="red" onclick="color(this)"></div>
+                <div id="yellow" onclick="color(this)"></div>
+                <div id="orange" onclick="color(this)"></div>
+                <div id="black" onclick="color(this)"></div>
+                <div id="eraser">Eraser</div>
+                <div id="white" onclick="color(this)"></div>
+                <input type="button" value="save" id="btn" size="30" onclick="save()">
+                <input type="button" value="clear" id="clr" size="23" onclick="erase();reLoad()">
+            </div>
+        </div>
+        <div id="rightcolumn">
+            <div class="innertube"><b>Right Column: <em>200px</em></b> lorem dipsum lorem dipsum lorem dipsum lorem dipsum lorem dipsum lorem dipsum lorem dipsum lorem dipsum lorem dipsum</div>
+        </div>
+        <div id="footer"><a href="http://www.elwebman.nl">Another App by elwebman.nl</a>
+            <p>This app uses paintings from the Rijksmuseum collection, Including works from the Rijksmuseum, View the finest works from the Rijksmuseum.</p>
+            <p>the draw-like-masters app has been developed using the Rijksmuseum API</p>
+        </div>  
+        <div class="innertube">
+          <img id="canvasimg" style="position:relative;top:10%;left:52%;" style="display:none;">
+      </div>
+  </div>
+  <script type="text/javascript" src="js/script.js"></script>
+</body>
 </html>
