--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div id="result"></div>
 
                     <p id="drawing1"></p>
-                    <canvas id="myCanvas" width="641" height="481" style="position:relative;top:10%;left:10%;border:2px solid;"></canvas>
+                    <canvas id="myCanvas" width="642" height="482"></canvas>
                 </div>
             </div>
         </div>
@@ -57,7 +57,7 @@
         </div>
         <div id="footer"><a href="http://www.elwebman.nl">Another App by elwebman.nl</a>
             <p>This app uses paintings from the Rijksmuseum collection, Including works from the Rijksmuseum, View the finest works from the Rijksmuseum.</p>
-            <p>the draw-like-masters app has been developed using the Rijksmuseum API</p>
+            <p>the draw-like-masters app has been developed using the Rijksmuseum API.</p>
         </div>  
         <div class="innertube">
           <img id="canvasimg" style="position:relative;top:10%;left:52%;" style="display:none;">
