fix firefox bug and enhanced css further

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Alex Olivet - elwebman.nl">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+     
 </head>
 <body onload="init()">
     <div id="maincontainer">
@@ -29,11 +30,9 @@
                             <input type="button" value="Search" id="search">
                         </div>
                     </div>
-
                     <div id="result"></div>
-
                     <p id="drawing1"></p>
-                    <canvas id="myCanvas" width="642" height="482"></canvas>
+                    <canvas id="myCanvas" width="642" height="482">Your browser does not support the HTML5 "canvas" tag.</canvas>
                 </div>
             </div>
         </div>
@@ -63,6 +62,6 @@
           <img id="canvasimg" style="position:relative;top:10%;left:52%;" style="display:none;">
       </div>
   </div>
-  <script type="text/javascript" src="js/script.js"></script>
+ <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
