elaborating the framework and adding font

--- a/index.html
+++ b/index.html
@@ -15,98 +15,101 @@
   <nav>
     <div id="mainNav">
       <a href="#page-one">Home |</a>
-      <a href="#page-two">About |</a>
-      <a href="#page-three">Portfolio |</a>
+      <a href="#page-two">Art & Education |</a>
+      <a href="#page-three">The Collection |</a>
       <a href="#page-four">Stickers |</a>
       <a href="#page-five">Shop |</a>
+      <a href="drawing.html">go to directly to the APP!|</a> 
     </div>
     <span id="menu" onclick="openNav()">&#9776; open</span>
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="#page-one" onclick="closeNav()">Home</a>
-      <a href="#page-two" onclick="closeNav()">About</a>
-      <a href="#page-three" onclick="closeNav()">Portfolio</a>
+      <a href="#page-two" onclick="closeNav()">Art & Education</a>
+      <a href="#page-three" onclick="closeNav()">The Collection</a>
       <a href="#page-four" onclick="closeNav()">Stickers</a>
       <a href="#page-five" onclick="closeNav()">Shop</a>
+      <a href="drawing.html" onclick="closeNav()">Draw-like-masters</a>
     </div>
   </nav>
   <!-- Nav ends here -->
   <!-- Section Starts -->
   <section id="page-one">
-    <h2>Simple One-Page Layout<br>
-      w/ Smooth Scrolling
-    </h2>
+    <h2>draw-like-masters<h2>
+      <h3>drawing art in an app</h3>
     <div class="container">
       <div class="row">
-        <div class="col-6">
-          <p>Lorem ipsúm dolor sit amet, facete luptátum pri ex. Pro primis ñusquam ne. Solúm moderatius quo in, quaeque nomiñati petentium nam no, solét cetero verterém eum ex. Utroqué suavitáte ut vím. Atqúi labore duo áñ, añ dicta forensibus eum, ne vís tibique petentíum.</p>
+        <div class="col-2">
+      <p>1 - search for anything. An artist, painting or something!</p>
 
-          <p>  Mel ut mázim oporteat efficiendi, sed ei quís scrípserit suscipiantur. Eu nam ubique omnesqúe similique. Eám minimum ómittam íd, mea ullum tation iudicabit eu. Dúo hiñc utamur pérfecto út, melius mediocrem honestatis eum ei. At sententiae interessét vix, docendi molestie ei nec, ut odio brúte accusata prí. Ius ñolúisse adipisci assueverit cu, pér te civibus invenire explicari.</p>
-
-          <p>Eam eu alii plácerat cónstituam, domiñg regione ne sed. Eu pro audiré vóluptua, vim ea agam abhorreánt. No vim ñonumy peténtium. Illud labóres has ut, qui ad facer incorrupte eloquentiam.</p>
-
-          <p>Id sea tantas erípuit. Eam cu elitr posidonium, per ad essent nostrum probatús, ne pri evérti contentioñes. Eí átqui clita detrácto eum, vis simúl ómnesque vituperata at. Altéra sapientem suscipiantur vim an. Ut ius dúis accusámus consulatu, has móvet doceñdi dissentias no.</p>
         </div>
-        <div class="col-6-sm">
-      <p>text</p>
+          <div class="col-2">
+      <p>2 - draw on the image. it is fun! You can even replay your drawing!</p>
 
+        </div>
+          <div class="col-2">
+      <p>3 - you like the image? want to continue working on it? we send the link image to your email!</p>
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4-sm">
+      <p> <a href="drawing.html"> Access the "draw-like-masters" APP</a></p>
         </div>
       </div>
     </div>
   </section>
   <!-- Section Starts -->
   <section id="page-two">
-    <h2>Page Two</h2>
+    <br>
+    <br>
     <div class="container">
       <div class="row">
-       <div class="col-6">
-        <p>Lorem ipsúm dolor sit amet, facete luptátum pri ex. Pro primis ñusquam ne. Solúm moderatius quo in, quaeque nomiñati petentium nam no, solét cetero verterém eum ex. Utroqué suavitáte ut vím. Atqúi labore duo áñ, añ dicta forensibus eum, ne vís tibique petentíum.</p>
+      <div class="col-6 right">
+       <p>Drawing is not primarily a creative means of expression, it is an intellectual activity - a way of understanding the world.</p>
 
-        <p>  Mel ut mázim oporteat efficiendi, sed ei quís scrípserit suscipiantur. Eu nam ubique omnesqúe similique. Eám minimum ómittam íd, mea ullum tation iudicabit eu. Dúo hiñc utamur pérfecto út, melius mediocrem honestatis eum ei. At sententiae interessét vix, docendi molestie ei nec, ut odio brúte accusata prí. Ius ñolúisse adipisci assueverit cu, pér te civibus invenire explicari.</p>
+        <p>The visual imagery that children acquire through drawing is vital to their later understanding of subjects such as geography and maths.</p>
 
-        <p>Eam eu alii plácerat cónstituam, domiñg regione ne sed. Eu pro audiré vóluptua, vim ea agam abhorreánt. No vim ñonumy peténtium. Illud labóres has ut, qui ad facer incorrupte eloquentiam.</p>
+        <p>The "draw-like-masters" APP calls for a broader, more rigorous understanding of the power of drawing as an educative tool. This is an initiative to get the whole world drawing.</p>
 
-        <p>Id sea tantas erípuit. Eam cu elitr posidonium, per ad essent nostrum probatús, ne pri evérti contentioñes. Eí átqui clita detrácto eum, vis simúl ómnesque vituperata at. Altéra sapientem suscipiantur vim an. Ut ius dúis accusámus consulatu, has móvet doceñdi dissentias no.</p>
-      </div>
-      <div class="col-6-sm">
-      <p>text</p>
+        <p>Drawing and sketching were once activities limited to pencil and paper. Thanks to The Rijksmuseum , dive into the online collection. The "draw-like-masters" APP let your creativity run wild.</p>
       </div>
     </div>
   </div>
 </section>
 <!-- Section Starts -->
 <section id="page-three">
-  <h2>Page Three</h2>
+  <h2>The Rijksmuseum Collection</h2>
   <div class="container">
     <div class="row">
      <div class="col-6">
-      <p>Lorem ipsúm dolor sit amet, facete luptátum pri ex. Pro primis ñusquam ne. Solúm moderatius quo in, quaeque nomiñati petentium nam no, solét cetero verterém eum ex. Utroqué suavitáte ut vím. Atqúi labore duo áñ, añ dicta forensibus eum, ne vís tibique petentíum.</p>
+      <p>&nbsp;</p>
+      <p>Rijksstudio opens up the Rijksmuseum collection for everyone to enjoy, with more than 100,000 artworks made freely available to explore in detail, touch, like and use in your own creations. </p>
 
-      <p>  Mel ut mázim oporteat efficiendi, sed ei quís scrípserit suscipiantur. Eu nam ubique omnesqúe similique. Eám minimum ómittam íd, mea ullum tation iudicabit eu. Dúo hiñc utamur pérfecto út, melius mediocrem honestatis eum ei. At sententiae interessét vix, docendi molestie ei nec, ut odio brúte accusata prí. Ius ñolúisse adipisci assueverit cu, pér te civibus invenire explicari.</p>
+      <p> Bring together your favourite works, share them with friends or download the images free of charge to create your own new artworks. All images presented in Rijksstudio have been released for private and commercial use. All you need is your imagination!</p>
 
-      <p>Eam eu alii plácerat cónstituam, domiñg regione ne sed. Eu pro audiré vóluptua, vim ea agam abhorreánt. No vim ñonumy peténtium. Illud labóres has ut, qui ad facer incorrupte eloquentiam.</p>
+      <p>The "draw-like-masters" APP was developed using the Rijksmuseum API. Each Search result will return not the only the picture but also the title, a small description and the artist that made the painting.</p><p>A direct link to the Rijksstudio will be presented to the user on each work of art.</p>
 
-      <p>Id sea tantas erípuit. Eam cu elitr posidonium, per ad essent nostrum probatús, ne pri evérti contentioñes. Eí átqui clita detrácto eum, vis simúl ómnesque vituperata at. Altéra sapientem suscipiantur vim an. Ut ius dúis accusámus consulatu, has móvet doceñdi dissentias no.</p>
-    </div>
-    <div class="col-6-sm">
- <p>text</p>
+      <p>The Rijksmuseum Collection can now be enjoyed by people across the world. Even if you can't travel to Amsterdam, the Rijksmuseum Collection is available to you.</p>
     </div>
   </div>
 </div>
 </section>
 <!-- Section Starts -->
 <section id="page-four">
-  <h2>Page Four</h2>
+  <h2>About this APP</h2>
   <div class="container">
     <div class="row">
      <div class="col-6">
-      <p>Lorem ipsúm dolor sit amet, facete luptátum pri ex. Pro primis ñusquam ne. Solúm moderatius quo in, quaeque nomiñati petentium nam no, solét cetero verterém eum ex. Utroqué suavitáte ut vím. Atqúi labore duo áñ, añ dicta forensibus eum, ne vís tibique petentíum.</p>
+         <p>&nbsp;</p>
+      <p>The "draw-like-masters" APP is an an incredibly simple API that can be used by young and old alike.</p>
 
-      <p>  Mel ut mázim oporteat efficiendi, sed ei quís scrípserit suscipiantur. Eu nam ubique omnesqúe similique. Eám minimum ómittam íd, mea ullum tation iudicabit eu. Dúo hiñc utamur pérfecto út, melius mediocrem honestatis eum ei. At sententiae interessét vix, docendi molestie ei nec, ut odio brúte accusata prí. Ius ñolúisse adipisci assueverit cu, pér te civibus invenire explicari.</p>
+      <p>This API has been build using JSON. </p><p>JSON (JavaScript Object Notation) is a minimal, readable format for structuring data. It is a lightweight data-interchange format. It is used primarily to transmit data between a server and web application</p>
 
-      <p>Eam eu alii plácerat cónstituam, domiñg regione ne sed. Eu pro audiré vóluptua, vim ea agam abhorreánt. No vim ñonumy peténtium. Illud labóres has ut, qui ad facer incorrupte eloquentiam.</p>
+      <p>I am elwebman.nl and I love to create things that are useful. I have developed this app by joining a museum's collection with today's technology.</p>
+      <p>I am inspired by this and would like to invite users to create their own masterpieces.</p>
 
-      <p>Id sea tantas erípuit. Eam cu elitr posidonium, per ad essent nostrum probatús, ne pri evérti contentioñes. Eí átqui clita detrácto eum, vis simúl ómnesque vituperata at. Altéra sapientem suscipiantur vim an. Ut ius dúis accusámus consulatu, has móvet doceñdi dissentias no.</p>
+      <p>The "draw-like-masters" APP is for everyone, young and and old alikes. It is aimed to promote drawing and art around th world.</p>
     </div>
     <div class="col-6-sm">
  <p>text</p>
