starting php communication

--- a/contact-form-thank-you.html
+++ b/contact-form-thank-you.html
@@ -10,7 +10,7 @@
 
 <SCRIPT LANGUAGE='JavaScript'>
            window.alert('Thank you. Your Positive Words are underway!')
-           window.location.href='http://stickers.elwebman.nl/';
+           window.location.href='http://draw-like-masters.elwebman.nl/';
        </SCRIPT>
 </body>
 </html>
