--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
       <a href="#page-one">Home |</a>
       <a href="#page-two">Art & Education |</a>
       <a href="#page-three">The Collection |</a>
-      <a href="#page-four">Stickers |</a>
-      <a href="#page-five">Shop |</a>
+      <a href="#page-four">About |</a>
+      <a href="#page-five">Contact |</a>
       <a href="drawing.html">go to directly to the APP!|</a> 
     </div>
-    <span id="menu" onclick="openNav()">&#9776; open</span>
+    <span id="menu" onclick="openNav()">&#9776; Open</span>
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="#page-one" onclick="closeNav()">Home</a>
       <a href="#page-two" onclick="closeNav()">Art & Education</a>
       <a href="#page-three" onclick="closeNav()">The Collection</a>
-      <a href="#page-four" onclick="closeNav()">Stickers</a>
-      <a href="#page-five" onclick="closeNav()">Shop</a>
-      <a href="drawing.html" onclick="closeNav()">Draw-like-masters</a>
+      <a href="#page-four" onclick="closeNav()">About</a>
+      <a href="#page-five" onclick="closeNav()">Contact</a>
+      <a href="drawing.html" onclick="closeNav()">Draw-like-masters APP</a>
     </div>
   </nav>
   <!-- Nav ends here -->
@@ -109,7 +109,7 @@
       <p>I am elwebman.nl and I love to create things that are useful. I have developed this app by joining a museum's collection with today's technology.</p>
       <p>I am inspired by this and would like to invite users to create their own masterpieces.</p>
 
-      <p>The "draw-like-masters" APP is for everyone, young and and old alikes. It is aimed to promote drawing and art around th world.</p>
+      <p>The "draw-like-masters" APP is for everyone, young and and old alikes. It is aimed to promote drawing and art around the world.</p>
     </div>
     <div class="col-6-sm">
  <p>text</p>
@@ -124,7 +124,7 @@
   <div class="container">
     <div class="row">
       <div class="col-6">
-        <h1>We email Positive Words to you!</h1>
+        <h1>Tell us what you think!</h1>
         <form method="POST" name="contactform" action="js/contact-form-handler.php" id="form">
           <p>
             <label id='name'>Your Name:</label>
@@ -140,11 +140,10 @@
           <p>
             <label id='message'>Your Comments</label>
             <br>
-            <textarea name="message_1"  class="textarea" readonly></textarea>
             <textarea name="message"  id="textarea_1"></textarea>
           </p>
           <p>
-            <input type="submit" value="Order here">
+            <input type="submit" value="Send">
           </p>
         </form>
         <!-- start email validator -->
