styling draeing app further to sync in with geenral look and feel

--- a/drawing.html
+++ b/drawing.html
@@ -12,8 +12,8 @@
 
 </head>
 
-<body>
-
+<body id="page-six">
+<a href="index.html" id="home-top"><i class="fa fa-home fa-5x" aria-hidden="true"></i></a>
 
   <div class="clearfix wrap">
 
