--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </section>
 <!-- Section Starts -->
 <section id="page-three">
-  <h2>The Rijksmuseum Collection</h2>
+  <h2>The Collection</h2>
   <div class="container">
     <div class="row">
      <div class="col-6">
@@ -100,7 +100,7 @@
   <h2>About this APP</h2>
   <div class="container">
     <div class="row">
-     <div class="col-6">
+     <div class="col-6 right">
          <p>&nbsp;</p>
       <p>The "draw-like-masters" APP is an an incredibly simple API that can be used by young and old alike.</p>
 
@@ -111,15 +111,12 @@
 
       <p>The "draw-like-masters" APP is for everyone, young and and old alikes. It is aimed to promote drawing and art around the world.</p>
     </div>
-    <div class="col-6-sm">
- <p>text</p>
-    </div>
   </div>
 </div>
 </section>
 <!-- Section Starts -->
 <section id="page-five">
-  <h2>Page 5
+  <h2>Contact
   </h2>
   <div class="container">
     <div class="row">
@@ -154,8 +151,6 @@
         frmvalidator.addValidation("email", "email", "Please enter a valid email address");
         </script>
         <!-- end email validator -->
-      </div>
-      <div class="col-6-sm">
       </div>
     </div>
   </div>
