enhancing ui feel

--- a/index.html
+++ b/index.html
@@ -37,82 +37,97 @@
   <section id="page-one">
     <h2>draw-like-masters<h2>
       <h3>drawing art in an app</h3>
-    <div class="container">
-      <div class="row">
-        <div class="col-2">
-      <p>1 - search for anything. An artist, painting or something!</p>
-
-        </div>
+      <div class="container">
+        <div class="row">
           <div class="col-2">
-      <p>2 - draw on the image. it is fun! You can even replay your drawing!</p>
+            <p>1 - search for anything. An artist, painting or something!</p>
 
-        </div>
+          </div>
           <div class="col-2">
-      <p>3 - you like the image? want to continue working on it? we send the link image to your email!</p>
+            <p>2 - draw on the image. it is fun! You can even replay your drawing!</p>
 
+          </div>
+          <div class="col-2">
+            <p>3 - you like the image? want to continue working on it? we send the link image to your email!</p>
+
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-4-sm">
+            <p> <a href="drawing.html"> Access the "draw-like-masters" APP</a></p>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-4-sm">
-      <p> <a href="drawing.html"> Access the "draw-like-masters" APP</a></p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Section Starts -->
-  <section id="page-two">
-    <br>
-    <br>
+    </section>
+    <!-- Section Starts -->
+    <section id="page-two">
+      <br>
+      <br>
+      <div class="container">
+        <div class="row">
+          <div class="col-6 right">
+           <p>Drawing is not primarily a creative means of expression, it is an intellectual activity - a way of understanding the world.</p>
+
+           <p>The visual imagery that children acquire through drawing is vital to their later understanding of subjects such as geography and maths.</p>
+
+           <p>The "draw-like-masters" APP calls for a broader, more rigorous understanding of the power of drawing as an educative tool. This is an initiative to get the whole world drawing.</p>
+
+           <p>Drawing and sketching were once activities limited to pencil and paper now thanks to The Rijksmuseum , dive into the online collection and let your creativity run wild.</p>
+         </div>
+       </div>
+     </div>
+   </section>
+   <!-- Section Starts -->
+   <section id="page-three">
+    <h2>The Collection</h2>
     <div class="container">
       <div class="row">
-      <div class="col-6 right">
-       <p>Drawing is not primarily a creative means of expression, it is an intellectual activity - a way of understanding the world.</p>
+       <div class="col-6">
+        <p>&nbsp;</p>
+        <p>Rijksstudio opens up the Rijksmuseum collection for everyone to enjoy, with more than 100,000 artworks made freely available to explore in detail, touch, like and use in your own creations. </p>
 
-        <p>The visual imagery that children acquire through drawing is vital to their later understanding of subjects such as geography and maths.</p>
+        <p> Bring together your favourite works, share them with friends or download the images free of charge to create your own new artworks. All images presented in Rijksstudio have been released for private and commercial use. All you need is your imagination!</p>
 
-        <p>The "draw-like-masters" APP calls for a broader, more rigorous understanding of the power of drawing as an educative tool. This is an initiative to get the whole world drawing.</p>
+        <p>The "draw-like-masters" APP was developed using the Rijksmuseum API. Each Search result will return not the only the picture but also the title, a small description and the artist that made the painting.</p><p>A direct link to the Rijksstudio will be presented to the user on each work of art.</p>
 
-        <p>Drawing and sketching were once activities limited to pencil and paper. Thanks to The Rijksmuseum , dive into the online collection. The "draw-like-masters" APP let your creativity run wild.</p>
+        <p>The Rijksmuseum Collection can now be enjoyed by people across the world. Even if you can't travel to Amsterdam, the Rijksmuseum Collection is available to you.</p>
       </div>
     </div>
   </div>
-</section>
-<!-- Section Starts -->
-<section id="page-three">
-  <h2>The Collection</h2>
-  <div class="container">
-    <div class="row">
-     <div class="col-6">
-      <p>&nbsp;</p>
-      <p>Rijksstudio opens up the Rijksmuseum collection for everyone to enjoy, with more than 100,000 artworks made freely available to explore in detail, touch, like and use in your own creations. </p>
-
-      <p> Bring together your favourite works, share them with friends or download the images free of charge to create your own new artworks. All images presented in Rijksstudio have been released for private and commercial use. All you need is your imagination!</p>
-
-      <p>The "draw-like-masters" APP was developed using the Rijksmuseum API. Each Search result will return not the only the picture but also the title, a small description and the artist that made the painting.</p><p>A direct link to the Rijksstudio will be presented to the user on each work of art.</p>
-
-      <p>The Rijksmuseum Collection can now be enjoyed by people across the world. Even if you can't travel to Amsterdam, the Rijksmuseum Collection is available to you.</p>
-    </div>
-  </div>
-</div>
 </section>
 <!-- Section Starts -->
 <section id="page-four">
   <h2>About this APP</h2>
   <div class="container">
     <div class="row">
-     <div class="col-6 right">
-         <p>&nbsp;</p>
-      <p>The "draw-like-masters" APP is an an incredibly simple API that can be used by young and old alike.</p>
+     <div class="col-6 LEFT">
+       <p>&nbsp;</p>
+       <p>The "draw-like-masters" APP is an an incredibly simple API that can be used by young and old alike.</p>
 
-      <p>This API has been build using JSON. </p><p>JSON (JavaScript Object Notation) is a minimal, readable format for structuring data. It is a lightweight data-interchange format. It is used primarily to transmit data between a server and web application</p>
+       <p>This API has been build using JSON. </p><p>JSON (JavaScript Object Notation) is a minimal, readable format for structuring data. It is a lightweight data-interchange format. It is used primarily to transmit data between a server and web application</p>
 
-      <p>I am elwebman.nl and I love to create things that are useful. I have developed this app by joining a museum's collection with today's technology.</p>
-      <p>I am inspired by this and would like to invite users to create their own masterpieces.</p>
+       <p>I am elwebman.nl and I love to create things that are useful. I have developed this app by joining a museum's collection with today's technology.</p>
+       <p>I am inspired by this and would like to invite users to create their own masterpieces.</p>
 
-      <p>The "draw-like-masters" APP is for everyone, young and and old alikes. It is aimed to promote drawing and art around the world.</p>
-    </div>
-  </div>
-</div>
+       <p>The "draw-like-masters" APP is for everyone, young and and old alikes. It is aimed to promote drawing and art around the world.</p>
+     </div>
+     <div class="col-4 right">
+       <p>&nbsp;</p>
+       <p>Method of use:</p>
+       <p>- search for anything.</p>
+
+       <p>- click the search button.</p>
+
+       <p>- image will display on canvas.</p>
+       <p>- title,artist and description will display along.</p>
+
+       <p>- use your cursor to draw on the picture.</p>
+       <p>- if you want a new picture, click on 'Reset Canvas'.</p>
+       <p>- if you want to save the image, click on 'Save Image'.</p>
+       <!-- <p>8 Click on 'Replay' to replay your drawing (Original image will not display).</p> -->
+     </div>
+   </div>
+ </div>
 </section>
 <!-- Section Starts -->
 <section id="page-five">
