enhancing the drawing app further

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
           </div>
           <div class="col-2">
-            <p>2 - draw on the image. it is fun! You can even replay your drawing!</p>
+            <p>2 - draw on the image. it is fun!</p>
 
           </div>
           <div class="col-2">
