--- a/drawing.html
+++ b/drawing.html
@@ -29,7 +29,7 @@
      <!--  will display text if nothing is found -->
      <div id="result4"></div>
      <p id="drawing1"></p>
-     <canvas id="myCanvas" width="620" height="320">Your browser does not support the HTML5 "canvas" tag.</canvas>
+     <canvas id="myCanvas" width="393" height="320">Your browser does not support the HTML5 "canvas" tag.</canvas>
 
      <div id="controls">
       <button id='reset-canvas'>Reset Canvas</button>
@@ -63,9 +63,12 @@
   </div>
 </div>
 
-<div class="col col5">
+<div class="col col6">
   <div class="box box2">Title:<div id="result5"></div></div>
   <div class="box box2">Description:<div id="result2"></div></div>
+  <div class="box box1">
+    <p>The "draw-like-masters" APP has been developed using <a href="http://rijksmuseum.github.io">the Rijksmuseum API.</a></p>
+  </div>
 </div>
 
 
@@ -82,12 +85,11 @@
 
 <!--Column#4-->
 <div class="col col3">
-  <div class="box box2">
-    <p>This app uses paintings from the Rijksmuseum collection, Including works from the Rijksmuseum, View the finest works from the Rijksmuseum.</p>
-    <p>the draw-like-masters app has been developed using the Rijksmuseum API.</p>
+  <div class="box box1">
+    <p>The "draw-like-masters" APP has been developed using <a href="http://rijksmuseum.github.io">the Rijksmuseum API.</a></p>
   </div>
-  <div class="box box6">13
-   <img id="canvas-image" style="position:relative;" style="display:none;">
+  <div class="box box6">
+   <img id="canvas-image">
  </div>        
 
  <div class="col col3">
