ui improvement on desktop and mobile

--- a/contact-form-thank-you.html
+++ b/contact-form-thank-you.html
@@ -9,7 +9,7 @@
 <body>
 
 <SCRIPT LANGUAGE='JavaScript'>
-           window.alert('Thank you. Your Positive Words are underway!')
+           window.alert('Thank you for contacting us!')
            window.location.href='http://draw-like-masters.elwebman.nl/';
        </SCRIPT>
 </body>
