--- a/index.html
+++ b/index.html
@@ -1,68 +1,70 @@
 <!DOCTYPE html>
-<html >
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Draw like Masters App - by elwebman.nl</title>
-  <meta name="description" content="Draw like Masters APP">
-  <meta name="author" content="Alex Olivet - elwebman.nl">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/main_style.css">
-  <!-- a helper script for vaidating the form-->
-  <script src="js/email_validator.js"></script>
+    <meta charset="UTF-8">
+    <title>Draw like Masters App - by elwebman.nl</title>
+    <meta name="description" content="Draw like Masters APP">
+    <meta name="author" content="Alex Olivet - elwebman.nl">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main_style.css">
+    <!-- a helper script for vaidating the form-->
+    <script src="js/email_validator.js"></script>
 </head>
+
 <body>
-  <!-- Nav starts here -->
-  <nav>
-    <div id="mainNav">
-      <a href="#page-one">Home |</a>
-      <a href="#page-two">Art & Education |</a>
-      <a href="#page-three">The Collection |</a>
-      <a href="#page-four">About |</a>
-      <a href="#page-five">Contact |</a>
-      <a href="drawing.html">go to directly to the APP!|</a> 
-    </div>
-    <span id="menu" onclick="openNav()">&#9776; Open</span>
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="#page-one" onclick="closeNav()">Home</a>
-      <a href="#page-two" onclick="closeNav()">Art & Education</a>
-      <a href="#page-three" onclick="closeNav()">The Collection</a>
-      <a href="#page-four" onclick="closeNav()">About</a>
-      <a href="#page-five" onclick="closeNav()">Contact</a>
-      <a href="drawing.html" onclick="closeNav()">Draw-like-masters APP</a>
-    </div>
-  </nav>
-  <!-- Nav ends here -->
-  <!-- Section Starts -->
-  <section id="page-one">
-    <h2>draw-like-masters<h2>
+    <!-- Nav starts here -->
+    <nav>
+        <div id="mainNav">
+            <a href="#page-one">Home |</a>
+            <a href="#page-two">Art & Education |</a>
+            <a href="#page-three">The Collection |</a>
+            <a href="#page-four">About |</a>
+            <a href="#page-five">Contact |</a>
+            <a href="drawing.html">go to directly to the APP!</a>
+        </div>
+        <span id="menu" onclick="openNav()">&#9776; Open</span>
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="#page-one" onclick="closeNav()">Home</a>
+            <a href="#page-two" onclick="closeNav()">Art & Education</a>
+            <a href="#page-three" onclick="closeNav()">The Collection</a>
+            <a href="#page-four" onclick="closeNav()">About</a>
+            <a href="#page-five" onclick="closeNav()">Contact</a>
+            <a href="drawing.html" onclick="closeNav()">Draw-like-masters APP</a>
+        </div>
+    </nav>
+    <!-- Nav ends here -->
+    <!-- Section Starts -->
+    <section id="page-one">
+        <h2>draw-like-masters</h2>
+      <br>
       <h3>drawing art in an app</h3>
       <div class="container">
         <div class="row">
           <div class="col-2">
-            <p>1 - search for anything. An artist, painting or something!</p>
+            <p>1 - Search for anything. An artist, painting or something!</p>
 
           </div>
           <div class="col-2">
-            <p>2 - draw on the image. it is fun!</p>
+            <p>2 - Draw on the image. it is fun!</p>
 
           </div>
           <div class="col-2">
-            <p>3 - you like the image? want to continue working on it? we send the link image to your email!</p>
+            <p>3 - You like the image? want to continue working on it? we send the link image to your email!</p>
 
           </div>
         </div>
         <div class="row">
-          <div class="col-4-sm">
-            <p> <a href="drawing.html"> Access the "draw-like-masters" APP</a></p>
+          <div class="col-4">
+          <a href="drawing.html" target="_parent"><button class="tools">Access the APP !</button></a>
           </div>
         </div>
       </div>
     </section>
     <!-- Section Starts -->
     <section id="page-two">
-      <br>
-      <br>
+      <h2>Education is fun</h2>
       <div class="container">
         <div class="row">
           <div class="col-6 right">
@@ -80,97 +82,100 @@
    <!-- Section Starts -->
    <section id="page-three">
     <h2>The Collection</h2>
-    <div class="container">
-      <div class="row">
-       <div class="col-6">
-        <p>&nbsp;</p>
-        <p>Rijksstudio opens up the Rijksmuseum collection for everyone to enjoy, with more than 100,000 artworks made freely available to explore in detail, touch, like and use in your own creations. </p>
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <p>&nbsp;</p>
+                    <p>Rijksstudio opens up the Rijksmuseum collection for everyone to enjoy, with more than 100,000 artworks made freely available to explore in detail, touch, like and use in your own creations. </p>
 
-        <p> Bring together your favourite works, share them with friends or download the images free of charge to create your own new artworks. All images presented in Rijksstudio have been released for private and commercial use. All you need is your imagination!</p>
+                    <p> Bring together your favourite works, share them with friends or download the images free of charge to create your own new artworks. All images presented in Rijksstudio have been released for private and commercial use. All you need is your imagination!</p>
 
-        <p>The "draw-like-masters" APP was developed using the Rijksmuseum API. Each Search result will return not the only the picture but also the title, a small description and the artist that made the painting.</p><p>A direct link to the Rijksstudio will be presented to the user on each work of art.</p>
+                    <p>The "draw-like-masters" APP was developed using the Rijksmuseum API. Each Search result will return not the only the picture but also the title, a small description and the artist that made the painting.</p>
+                    <p>A direct link to the Rijksstudio will be presented to the user on each work of art.</p>
 
-        <p>The Rijksmuseum Collection can now be enjoyed by people across the world. Even if you can't travel to Amsterdam, the Rijksmuseum Collection is available to you.</p>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Section Starts -->
-<section id="page-four">
-  <h2>About this APP</h2>
-  <div class="container">
-    <div class="row">
-     <div class="col-6 LEFT">
-       <p>&nbsp;</p>
-       <p>The "draw-like-masters" APP is an an incredibly simple API that can be used by young and old alike.</p>
+                    <p>The Rijksmuseum Collection can now be enjoyed by people across the world. Even if you can't travel to Amsterdam, the Rijksmuseum Collection is available to you.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Section Starts -->
+    <section id="page-four">
+        <h2>About this APP</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-6 LEFT">
+                    <p>&nbsp;</p>
+                    <p>The "draw-like-masters" APP is an an incredibly simple API that can be used by young and old alike.</p>
 
-       <p>This API has been build using JSON. </p><p>JSON (JavaScript Object Notation) is a minimal, readable format for structuring data. It is a lightweight data-interchange format. It is used primarily to transmit data between a server and web application</p>
+                    <p>This API has been build using JSON. </p>
+                    <p>JSON (JavaScript Object Notation) is a minimal, readable format for structuring data. It is a lightweight data-interchange format. It is used primarily to transmit data between a server and web application</p>
 
-       <p>I am elwebman.nl and I love to create things that are useful. I have developed this app by joining a museum's collection with today's technology.</p>
-       <p>I am inspired by this and would like to invite users to create their own masterpieces.</p>
+                    <p>I am elwebman.nl and I love to create things that are useful. I have developed this app by joining a museum's collection with today's technology.</p>
+                    <p>I am inspired by this and would like to invite users to create their own masterpieces.</p>
 
-       <p>The "draw-like-masters" APP is for everyone, young and and old alikes. It is aimed to promote drawing and art around the world.</p>
-     </div>
-     <div class="col-4 right">
-       <p>&nbsp;</p>
-       <p>Method of use:</p>
-       <p>- search for anything.</p>
+                    <p>The "draw-like-masters" APP is for everyone, young and and old alikes. It is aimed to promote drawing and art around the world.</p>
+                </div>
+                <div class="col-4 right">
+                    <p>&nbsp;</p>
+                    <p>Method of use:</p>
+                    <p>- search for anything.</p>
 
-       <p>- click the search button.</p>
+                    <p>- click the search button.</p>
 
-       <p>- image will display on canvas.</p>
-       <p>- title,artist and description will display along.</p>
+                    <p>- image will display on canvas.</p>
+                    <p>- title,artist and description will display along.</p>
 
-       <p>- use your cursor to draw on the picture.</p>
-       <p>- if you want a new picture, click on 'Reset Canvas'.</p>
-       <p>- if you want to save the image, click on 'Save Image'.</p>
-       <!-- <p>8 Click on 'Replay' to replay your drawing (Original image will not display).</p> -->
-     </div>
-   </div>
- </div>
-</section>
-<!-- Section Starts -->
-<section id="page-five">
-  <h2>Contact
+                    <p>- use your cursor to draw on the picture.</p>
+                    <p>- if you want a new picture, click on 'Reset Canvas'.</p>
+                    <p>- if you want to save the image, click on 'Save Image'.</p>
+                    <!-- <p>8 Click on 'Replay' to replay your drawing (Original image will not display).</p> -->
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Section Starts -->
+    <section id="page-five">
+        <h2>Contact
   </h2>
-  <div class="container">
-    <div class="row">
-      <div class="col-6">
-        <h1>Tell us what you think!</h1>
-        <form method="POST" name="contactform" action="js/contact-form-handler.php" id="form">
-          <p>
-            <label id='name'>Your Name:</label>
-            <br>
-            <input type="text" name="name">
-          </p>
-          <p>
-            <label id='email'>Email Address:</label>
-            <br>
-            <input type="text" name="email">
-            <br>
-          </p>
-          <p>
-            <label id='message'>Your Comments</label>
-            <br>
-            <textarea name="message"  id="textarea_1"></textarea>
-          </p>
-          <p>
-            <input type="submit" value="Send">
-          </p>
-        </form>
-        <!-- start email validator -->
-        <script>
-        var frmvalidator = new Validator("contactform");
-        frmvalidator.addValidation("name", "req", "Please provide your name");
-        frmvalidator.addValidation("email", "req", "Please provide your email");
-        frmvalidator.addValidation("email", "email", "Please enter a valid email address");
-        </script>
-        <!-- end email validator -->
-      </div>
-    </div>
-  </div>
-</section>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src="js/index.js"></script>
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <h1>Tell us what you think!</h1>
+                    <form method="POST" name="contactform" action="js/contact-form-handler.php" id="form">
+                        <p>
+                            <label id='name'>Your Name:</label>
+                            <br>
+                            <input type="text" name="name">
+                        </p>
+                        <p>
+                            <label id='email'>Email Address:</label>
+                            <br>
+                            <input type="text" name="email">
+                            <br>
+                        </p>
+                        <p>
+                            <label id='message'>Your Comments</label>
+                            <br>
+                            <textarea name="message" id="textarea_1"></textarea>
+                        </p>
+                        <p>
+                            <input type="submit" value="Send">
+                        </p>
+                    </form>
+                    <!-- start email validator -->
+                    <script>
+                        var frmvalidator = new Validator("contactform");
+                        frmvalidator.addValidation("name", "req", "Please provide your name");
+                        frmvalidator.addValidation("email", "req", "Please provide your email");
+                        frmvalidator.addValidation("email", "email", "Please enter a valid email address");
+                    </script>
+                    <!-- end email validator -->
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="js/index.js"></script>
 </body>
+
 </html>
