adding loader and enhancing js further

--- a/drawing.html
+++ b/drawing.html
@@ -25,6 +25,7 @@
     <!--Column#1-->
     <div class="col col5">
       <div class="box box7">
+         <div class="loader" id="loader"></div>  
         <div id="result"></div>
         <!--  will display text if nothing is found -->
         <div id="result4"></div>
@@ -40,10 +41,8 @@
           </div>
           <div class="division">
             <!-- search button -->
-            <input type="button" value="Search" id="search" class="tools">
-          </div>
-           <div class="division">
-            <!-- search button -->
+             <button id="search" class="tools">Search</button>
+             <!-- reset button -->
              <button id='reset-canvas' class="tools">Reset Canvas</button>
           </div>
         </div>
