extra page and added more responsive feel

--- a/drawing.html
+++ b/drawing.html
@@ -73,7 +73,7 @@
     </div>
     <!--Column#4-->
     <!--not on mobile starts-->
-    <div id="mobile">
+    <div class="mobile">
     <div class="col col2">
       <div class="box box6">We email you the original image URL to your email.
         <ul>Simply follow the form instructions:
