fixed js issue and enhanced responsive behaviour

--- a/drawing.html
+++ b/drawing.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body id="page-six">
+<body id="page-five">
   <ul id="home-top">
     <li><a href="index.html"><i class="fa fa-home fa-3x" aria-hidden="true"></i></a>
     </li>
@@ -30,7 +30,7 @@
         <!--  will display text if nothing is found -->
         <div id="result4"></div>
         <p id="drawing1"></p>
-        <canvas id="myCanvas" width="393" height="340">Your browser does not support the HTML5 "canvas" tag.</canvas>
+        <canvas id="myCanvas" width="450" height="325">Your browser does not support the HTML5 "canvas" tag.</canvas>
       </div>
           <!--Column#2-->
       <div class="col col4">
