fixing php code and typos for css

--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
             </script>
             <!-- end email validator -->
             <ul class="social">
-              <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>
-              <li><a href="#" target="_blank"><i class="fa fa-github"></i></a></li>
-              <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.youtube.com/watch?v=UgKPiYaR1DI" target="_blank"><i class="fa fa-youtube"></i></a></li>
+              <li><a href="https://github.com/alexolivet/rijks" target="_blank"><i class="fa fa-github"></i></a></li>
+              <li><a href="https://nl.linkedin.com/in/alexolivet" target="_blank"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
         </div>
