fixing sass issues and adding partial file for fonts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <meta name="description" content="Draw like Masters APP">
       <meta name="author" content="Alex Olivet - elwebman.nl">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
       <link rel="stylesheet" href="css/main_style.css">
       <!-- a helper script for vaidating the form-->
       <script src="js/email_validator.js"></script>
@@ -59,11 +60,11 @@
 
             </div>
             <div class="col-3">
-              <p>2 - Draw on the image. it is fun!</p>
+              <p>2 - Draw on the image. It is fun!</p>
 
             </div>
             <div class="col-3">
-              <p>3 - You like the image? want to continue working on it? we send the link image to your email!</p>
+              <p>3 - You like the image? want to continue working on it? We send the link image to your email!</p>
 
             </div>
           </div>
@@ -173,8 +174,7 @@
     </section>
     <!-- Section Starts -->
     <section id="page-six">
-      <h2>Contact
-      </h2>
+      <h2>Contact</h2>
       <div class="container">
         <div class="row">
           <div class="col-6">
