fixing sass code

--- a/drawing.html
+++ b/drawing.html
@@ -99,7 +99,7 @@
             </li>
           </ol>
         </div>
-        <div class="box box3"> <button id="save-image" class="tools">Save Image</button></div>
+        <div class="box box3"> <button id="save-image" class="tools  animated shake">Save Image</button></div>
       </div>
       <!--Column#5-->
       <div class="col col3">
